# Demos

./: LICENSE  README.md
C++Proj/C++20Lrn/: CMakeLists.txt  main.cpp  thread_syn.cpp
C++Proj/C++_Libs/LibSample/: CMakeLists.txt
C++Proj/C++_Libs/LibSample/test/: CMakeLists.txt
C++Proj/C++_Libs/LibSample/test/inc/: library.h
C++Proj/C++_Libs/LibSample/test/src/: library.cpp
C++Proj/DBAccesser/: CMakeLists.txt  main.cpp  vcpkg.json
C++Proj/DBAccesser/dblib/: CMakeLists.txt  DBAccesser.cpp  DBAccesser.h
C++Proj/DBAccesser/dblib/ocilib/include/ocilibc/: api.h
C++Proj/DBAccesser/dblib/ocilib/lib/: ociliba.lib
C++Proj/ICM/: CMakeLists.txt  main.cpp
C++Proj/ICM/DBHelper/: CMakeLists.txt  DBHelper.cpp  DBHelper.h  main.cpp
C++Proj/ICM/ERP/: .editorconfig  CMakeLists.txt  ERP.cpp  ERPAckConcreteStrategy.cpp  ERPAckConcreteStrategy.h  ERPAckStrategyFactory.hpp  ERPHeartConcreteStrategy.cpp  ERPHeartConcreteStrategy.h  ERPHeartStrategyFactory.hpp  ERPLooper.cpp  ERPLooper.h  ERPMessage.cpp  ERPMessage.h  ERPOrderConcreteStrategy.cpp  ERPOrderConcreteStrategy.h  ERPOrderStrategyFactory.cpp  ERPOrderStrategyFactory.h  ERPServices.cpp  ERPServices.h  ERPStrategy.h  ERPStrategyFactory.h  order_callbacks.hpp  stdafx.cpp  stdafx.h
C++Proj/ICM/JsonParser/: CMakeLists.txt  tesJson.cpp
C++Proj/ICM/inc/: ActualResponseFlyw.cpp  ActualResponseFlyw.h  AsyncTask.hpp  CrewMgtHelper.hpp  DBOraclePool.hpp  IDataBase.h  L1VipMessage.hpp  MathFunctions.h  ProcDataMgtHelper.hpp  RequestUtility.hpp  ResponseHelper.hpp  ResponseUtility.hpp  StateUtility.hpp  TutorialConfig.h  XMLParser.hpp  common.hpp  ipc_message.h  l1vip_sstruct.h  loggers.hpp  mes_l2_struct.h  messagedef.h  model_l2_struct.h  project_shared.h  projectdata.h  thread_guard.hpp  tm_l2_struct.h  universal_toolbox.hpp  universal_toolbox.hpp.bak  xml_message.h
C++Proj/ICM/inc/ocilib/ocilibcpp/detail/: Exception.hpp
C++Proj/ICM/inc/spdlog/: ResponseHelper.hpp
C++Proj/ICM/libs/: fmtd.lib
C++Proj/ICM/test/: CMakeLists.txt  tsst_alignas.cpp
C++Proj/Listener/: CMakeLists.txt  main.cpp
C++Proj/OPCHelper/: CMakeLists.txt
C++Proj/OPCHelper/ua/: CMakeLists.txt  OPCUAHelper.cpp  main.cpp
C++Proj/OPCHelper/ua/inc/: OPCUAHelper.h  open62541.h
C++Proj/QtSlabTempCompared/: CMakeLists.txt  main.cpp  qt调用函数说明.txt  slabtempcomaredrender.cpp  slabtempcomaredrender.h  slabtempcomaredrender.ui  temp_calc.cpp
C++Proj/QtSlabTempCompared/data/111/: 2023-11-20温度对比1号炉.xlsx  2023-11-20温度对比2号炉.xlsx  2023-11-20温度对比3号炉.xlsx
C++Proj/QtSlabTempCompared/inc/: SlabTempCalDll.h  cpp_version.h  rapidcsv.h  temp_calc.h  universal_toolbox.hpp
HMI/NanGang/nercar-web/: .gitignore  README.md  config.js  index.vue  nuxt.config.js  package-lock.json  package.json  search.html
HMI/NanGang/nercar-web/assets/: logoLayout.vue  xwChangeElement.css
HMI/NanGang/nercar-web/assets/css/: reset.css  themeEcharts.js
HMI/NanGang/nercar-web/assets/icon/: iconfont.css  iconfont.eot  iconfont.js  iconfont.json
HMI/NanGang/nercar-web/components/: HelloWorld.vue  HmiTable.vue  NercarEcharts.vue  NercarEcharts2.vue  XlsxImportExport.vue  simplePagination.vue
HMI/NanGang/nercar-web/layouts/: default.vue  error.vue  staticPage.vue
HMI/NanGang/nercar-web/layouts/components/: MenuTree.vue  SideBar.vue
HMI/NanGang/nercar-web/lib/: AdminURL.js  GetData.js  Util.js  WebSocket.js  WebSocketService.js  api.js  jsPDF.js  pageStatus.js  tools.js  track.js  userinfo.json
HMI/NanGang/nercar-web/pages/: 1dbj.vue  1dcj.vue  2dbj.vue  2dcj.vue  alarm.vue  bzManagement1.vue  dcjHistory.vue  dcjManagement1.vue  dcjManagement2.vue  dcjWorking.vue  home.vue  index.vue  jhManagement1.vue  jls.vue  lcManagement.vue  lq.vue  lxfdj.vue  qfjManagement2.vue  sbjManagement1.vue  statistics.vue  technologyManage.vue  ypj.vue  ypjManagement2.vue  zbManagement1.vue  zbManagement2.vue
HMI/NanGang/nercar-web/pages/components/: ManagementTable.vue  TabPane.vue  boardHeader.vue  modifInfo.vue  setInfo.vue  steelInfo.vue  trackItem.vue  warnInfo.vue
HMI/NanGang/nercar-web/pages/demo/: demo.vue
HMI/NanGang/nercar-web/plugins/: api.js  directive.js  tttts.js  vue-echarts.js
HMI/NanGang/nercar-web/store/: index.js
HMI/multipleWindow3dScene/: WindowManager.js  main.js
